feat(identifier): add create and get identifier (#5)
