# deliveries/http/handlers/identifier/identifier_handler.go
@@ -1,0 +1,13 @@
+package handlers
+
+import service "github.com/dezh-tech/panda/services/identifier"
+
+type Identifier struct {
+	service service.Identifier
+}
+
+func NewIdentifierService(identifierSvc service.Identifier) Identifier {
+	return Identifier{
+		service: identifierSvc,
+	}
+}
